Work with background

--- a/Assignment6.html
+++ b/Assignment6.html
@@ -11,7 +11,17 @@
 </head>
 
 <body>
-   
+    <div class='container-fluid'>
+        <div class='row'>
+            <div class='col-10'></div>
+            <div class='col-2'>
+                <button id='axe'></button>
+                <button id='pickaxe'></button>
+                <button id='shovel'></button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./js/Assignment6.js"></script>
