--- a/Assignment6.html
+++ b/Assignment6.html
@@ -15,10 +15,10 @@
         <div class='row'>
             <div class='col-10'></div>
             <div class='col-2'>
-                
                 <button id='axe'></button>
                 <button id='pickaxe'></button>
                 <button id='shovel'></button>
+                <button id='buffer'></button>
             </div>
         </div>
     </div>
