almost but use_inventory works once

--- a/Assignment6.html
+++ b/Assignment6.html
@@ -18,7 +18,7 @@
                 <button id='axe'></button>
                 <button id='pickaxe'></button>
                 <button id='shovel'></button>
-                <button id='buffer'></button>
+                <button id='inventory' class='btn-inventory'></button>
             </div>
         </div>
     </div>
