--- a/Assignment6.html
+++ b/Assignment6.html
@@ -19,7 +19,7 @@
                 <button id='axe'></button>
                 <button id='pickaxe'></button>
                 <button id='shovel'></button>
-                <button id='inventory' class='btn-inventory'></button>
+                <button id='inventory' class='btn-inventory empty'></button>
             </div>
         </div>
     </div>
