--- a/Assignment6.html
+++ b/Assignment6.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/Assignment6.css">
     <title>Minecraft</title>
 </head>
@@ -16,9 +17,25 @@
             <div class='col-10'></div>
             <div class='col-2'>
                 <button id='new'>NEW GAME</button>
-                <button id='axe'></button>
-                <button id='pickaxe'></button>
-                <button id='shovel'></button>
+                <div>
+                    <button id='axe'></button>
+                    <div>
+                        <button id="tree-inventory" class="tree inventory">0</button>
+                        <button id="wood-inventory" class="wood inventory">0</button>
+                    </div>
+                </div>
+                <div>
+                    <button id='pickaxe'></button>
+                    <div>
+                        <button id="stone-inventory" class="stone inventory">0</button>
+                    </div>
+                </div>
+                <div>
+                    <button id='shovel'></button>
+                    <div>
+                        <button id="land-inventory" class="land inventory">0</button>
+                    </div>
+                </div>
                 <button id='inventory' class='btn-inventory empty'></button>
             </div>
         </div>
