--- a/Assignment6.html
+++ b/Assignment6.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class='accueil'>Salut</div>
     <div class='container-fluid'>
         <div class='row'>
             <div class='col-10'></div>
