--- a/Assignment6.html
+++ b/Assignment6.html
@@ -54,9 +54,9 @@
                     <button id='shovel'></button>
                     <div>
                         <button id="land-inventory" class="land inventory">0</button>
-
                     </div>
                 </div>
+                <button id="day-night">Day/Night</button>
             </div>
         </div>
     </div>
