Night mode and comentaries

--- a/Assignment6.html
+++ b/Assignment6.html
@@ -56,7 +56,8 @@
                         <button id="land-inventory" class="land inventory">0</button>
                     </div>
                 </div>
-                <button id="day-night">Day/Night</button>
+                <button id="day-btn">Day</button>
+                <button id="night-btn">Night</button>
             </div>
         </div>
     </div>
